# sortdocs

./: .gitignore  Makefile  README.md  pyproject.toml  sortdocs-gui.command  sortdocs.example.yaml
docs/: release-checklist.md
packaging/: sortdocs-gui.spec
scripts/: build-macos-app.sh  install-path.sh
src/sortdocs/: ai_client.py  bundling.py  cli.py  config.py  executor.py  guardrails.py  gui_launcher.py  logging_utils.py  memory.py  models.py  onboarding.py  pipeline.py  planner.py  scanner.py  state_store.py  utils.py
src/sortdocs/extractors/: __init__.py  base.py  docx.py  fallback.py  image.py  pdf.py  text.py
src/sortdocs/gui/: api_key_dialog.py  app.py  main_window.py  presenter.py  workers.py
tests/: test_ai_client.py  test_bundling.py  test_cli.py  test_config.py  test_e2e.py  test_executor.py  test_extractors.py  test_gui_launcher.py  test_gui_presenter.py  test_logging_utils.py  test_memory.py  test_onboarding.py  test_planner.py  test_scanner.py  test_state_store.py  test_utils.py
